# dsync

./: .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  README.md  cert.pem  index.html  key.pem  mkdocs.yml  objects.inv  properdocs.yml  pyproject.toml
.github/workflows/: deploy-mkdocs.yml
adrs/: index.html
adrs/ADR-###-Template/: index.html
adrs/ADR-001-YAML/: index.html
conventions/: index.html
conventions/branching-model/: index.html
conventions/cli/: index.html
dev/: 404.html  index.html
dev/adrs/: index.html
dev/adrs/ADR-###-Template/: index.html
dev/adrs/ADR-001-YAML/: index.html
dev/conventions/: index.html
dev/conventions/branching-model/: index.html
dev/conventions/cli/: index.html
dev/conventions/setup/: index.html
dev/meetings/: index.html
dev/meetings/Meetings Nodes/: index.html
dev/research/: index.html
dev/research/Konfiguration-Ordner-Dateien/: index.html
dev/research/VSYS26T2-27/: index.html
dev/research/VSYS26T2-33/: index.html
dev/research/VSYS26T2-37/: index.html
dev/search/: search_index.json
docs/: index.md
docs/adrs/: ADR-###-Template.md  ADR-001-YAML.md  ADR-002-Handshake.md  index.md
docs/conventions/: branching-model.md  cli.md  index.md  setup.md
docs/meetings/: Meetings Nodes.md  index.md
docs/research/: Konfiguration-Ordner-Dateien.md  VSYS26T2-27.md  VSYS26T2-33.md  VSYS26T2-37.md  index.md
dsync/: identity.py  integrity.py  main.py  setup_certs.py  state.py  tls.py  trust.py
dsync-config/: devices.yaml  folders.yaml
dsync/cli/: __init__.py  console.py
dsync/cli/callbacks/: __init__.py  config_dir.py
dsync/cli/commands/: _hello.py  sync.py
dsync/cli/commands/_demo/: __init__.py  add.py  list.py
dsync/cli/commands/peer/: __init__.py  announce.py  discover.py  map.py
dsync/config/: __init__.py  _base.py  device.py  folder.py
dsync/crypto/: __init__.py  keys.py
dsync/network/: __init__.py  discovery.py  node.py  p2p_core.py  relay_server.py  start_peer.py
dsync_config/: devices.yaml
meetings/: index.html
meetings/Meetings Nodes/: index.html
research/: index.html
research/Konfiguration-Ordner-Dateien/: index.html
research/VSYS26T2-27/: index.html
research/VSYS26T2-33/: index.html
scripts/: validate_commit_msg.py
search/: search_index.json
stubs/: zeroconf.pyi
tests/: test_identity_peer_map.py
