[project]
name = "dsync"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pre-commit>=4.5.1",
    "pydantic>=2.10",
    "pyyaml>=6.0.2",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[dependency-groups]
dev = [
    "types-pyyaml>=6.0.12",
]
